--- a/app04-quiz/Base.lproj/Main.storyboard
+++ b/app04-quiz/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                                             <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="opcaoCorretaBtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="OCC-Dt-0gr"/>
+                                            <action selector="opcaoSelecionadabtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="OCC-Dt-0gr"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3AI-Kz-Oyz">
@@ -122,7 +122,7 @@
                                             <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="opcaoCorretaBtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="3Gi-wr-RFW"/>
+                                            <action selector="opcaoSelecionadabtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="3Gi-wr-RFW"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CQB-rO-ckt">
@@ -141,7 +141,7 @@
                                             <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="opcaoCorretaBtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="o38-mp-izc"/>
+                                            <action selector="opcaoSelecionadabtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="o38-mp-izc"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WA0-TB-jfI">
@@ -160,7 +160,7 @@
                                             <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="opcaoCorretaBtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="mys-dW-q4S"/>
+                                            <action selector="opcaoSelecionadabtn:" destination="3g4-df-ra8" eventType="touchUpInside" id="mys-dW-q4S"/>
                                         </connections>
                                     </button>
                                 </subviews>
