--- a/app04-quiz/Base.lproj/Main.storyboard
+++ b/app04-quiz/Base.lproj/Main.storyboard
@@ -249,6 +249,9 @@
                                     <fontDescription key="titleFontDescription" type="system" pointSize="29"/>
                                     <color key="baseBackgroundColor" red="0.91372549530000002" green="0.34509804840000002" blue="0.1647058874" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="backFirstPage:" destination="dtC-kP-A4p" eventType="touchUpInside" id="VqW-u5-RRs"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ofp-ne-W1N"/>
@@ -272,9 +275,12 @@
                         <outlet property="lblCorretas" destination="92V-QQ-tup" id="5b4-1L-oaH"/>
                         <outlet property="lblErradas" destination="zyr-0J-uRn" id="Lpq-Ab-b3w"/>
                         <outlet property="lblRespondidas" destination="GlC-Yh-BfX" id="SMh-Xd-xzY"/>
+                        <outlet property="lblValorFinal" destination="cAb-PP-SaR" id="nJ6-mM-Rag"/>
+                        <segue destination="oqH-Bb-DSc" kind="unwind" identifier="unwindToFirst" unwindAction="unwid:" id="P8K-za-wsP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nuP-HW-Sag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="oqH-Bb-DSc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1775" y="23"/>
         </scene>
@@ -285,13 +291,13 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
